OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Value__c/fields/Encrypted_Value__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Value__c</fullName>
    <description>Encrypted storage for sensitive field values (e.g., SSN).</description>
    <label>Encrypted Value</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>