OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Value__c/fields/Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Soft delete flag to hide retired field values.</description>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>