OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Value__c/fields/Last_Validated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Validated_Date__c</fullName>
    <description>Timestamp of the most recent validation for this field value.</description>
    <label>Last Validated Date</label>
    <type>DateTime</type>
</CustomField>