OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Value__c/fields/Onboarding_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Requirement__c</fullName>
    <description>Parent onboarding requirement record for this field value.</description>
    <label>Onboarding Requirement</label>
    <referenceTo>Onboarding_Requirement__c</referenceTo>
    <relationshipLabel>Requirement Field Values</relationshipLabel>
    <relationshipName>Requirement_Field_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>