OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Value__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <description>Validation state of the field value (Valid, Invalid, Pending, Needs Correction).</description>
    <label>Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Needs Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>